<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color1"
    android:elevation="6dp"
    tools:context=".ui.fragments.splash.LoginSplashFragment">

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/vazir_fd_wol"
        android:text="@string/str_tv_title_end"
        android:textColor="@color/color_sec1"
        android:textSize="@dimen/h6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <ImageView
        android:id="@+id/img_end"
        android:layout_width="317dp"
        android:layout_height="317dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24"
        app:layout_constraintVertical_bias="0.19999999"
        tools:src="@mipmap/logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/done"
        android:drawableTint="@color/black"
        android:fontFamily="@font/vazir_medium"
        android:padding="10dp"
        android:text="@string/str_btn_end"
        android:textColor="@color/black"
        android:textSize="@dimen/h6"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_end"
        app:layout_constraintStart_toStartOf="@+id/img_end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:alpha="0.8"
        android:fontFamily="@font/vazir_fd_wol"
        android:gravity="center"
        android:text="@string/str_tv_body_end"
        android:textColor="@color/color_sec1"
        android:textSize="@dimen/body"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_end"
        app:layout_constraintStart_toStartOf="@+id/img_end"
        app:layout_constraintTop_toBottomOf="@+id/img_end"
        app:layout_constraintVertical_bias="0.26999998" />
</androidx.constraintlayout.widget.ConstraintLayout>