<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/color_sec1"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/crd_handle"
                android:layout_width="50dp"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/color_sec2"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:text="@string/str_dg_title_login"
                android:textColor="@color/black"
                android:textSize="@dimen/body"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crd_handle"
                app:layout_constraintVertical_bias="0.01999998" />

            <com.otpview.OTPTextView
                android:id="@+id/otp_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:elevation="6dp"
                android:layoutDirection="ltr"

                android:textColor="@android:color/black"
                android:visibility="visible"
                app:box_margin="10dp"
                app:height="50dp"
                app:length="4"
                app:otp="-"
                app:otp_box_background="@drawable/bg_otp_box"
                app:otp_box_background_active="@drawable/bg_otp_box_active"
                app:otp_box_background_error="@drawable/bg_otp_box_error"
                app:otp_box_background_inactive="@drawable/bg_otp_box_inactive"
                app:otp_box_background_success="@drawable/bg_otp_box_success"
                app:otp_text_size="@dimen/body"
                app:width="40dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:foregroundTint="@color/color_acc2"
                android:hint="@string/str_dg_et_hint_login"
                android:textColorHint="#505050"
                app:boxStrokeWidth="0.5dp"
                app:errorIconDrawable="@drawable/round_error_outline_24"
                app:errorTextColor="#EF5350"
                app:hintTextColor="@color/color_acc2"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone"
                app:layout_constraintVertical_bias="0.13999999"
                app:startIconDrawable="@drawable/icon_phone_android"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext"
                    android:drawingCacheQuality="high"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:textColor="@color/color_prim1"
                    android:textColorHint="@color/color_acc2"
                    android:textSize="@dimen/body" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/btn"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/str_dg_btn_login"
                android:textColor="@color/white"
                android:textSize="@dimen/h6"
                app:backgroundTint="@color/color_acc1"
                app:elevation="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/input_phone"
                app:layout_constraintStart_toStartOf="@+id/input_phone"
                app:layout_constraintTop_toBottomOf="@+id/input_phone"
                app:layout_constraintVertical_bias="0.06999999" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btn"
                android:enabled="true"
                android:gravity="center"
                android:text="تایید"
                android:textSize="@dimen/h6"
                android:visibility="gone"
                app:backgroundTint="@color/color_acc1"
                app:elevation="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/input_phone"
                app:layout_constraintStart_toStartOf="@+id/input_phone"
                app:layout_constraintTop_toBottomOf="@+id/input_phone"
                app:layout_constraintVertical_bias="0.06999999" />

            <LinearLayout
                android:id="@+id/line_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_note2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="6dp"
                    android:gravity="center"
                    android:text="آیا شماره شما  درست است؟"
                    android:textColor="@color/black"
                    android:textSize="@dimen/body"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/btn_phone"
                    app:layout_constraintStart_toStartOf="@+id/btn_phone"
                    app:layout_constraintTop_toBottomOf="@+id/btn_phone"
                    app:layout_constraintVertical_bias="0.25" />

                <TextView
                    android:id="@+id/tv_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:drawablePadding="6dp"

                    android:gravity="center"
                    android:text="09307283313"
                    android:textColor="@color/color_acc2"
                    android:textSize="@dimen/body"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/btn_phone"
                    app:layout_constraintStart_toStartOf="@+id/btn_phone"
                    app:layout_constraintTop_toBottomOf="@+id/btn_phone"
                    app:layout_constraintVertical_bias="0.25" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableRight="@drawable/time"
                    android:drawablePadding="6dp"
                    android:drawableTint="@color/color_acc1"
                    android:gravity="center"
                    android:text="زمان باقیمانده تا ارسال مجدد کد:"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/btn_phone"
                    app:layout_constraintStart_toStartOf="@+id/btn_phone"
                    app:layout_constraintTop_toBottomOf="@+id/btn_phone"
                    app:layout_constraintVertical_bias="0.25" />

                <TextView
                    android:id="@+id/tv_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:drawablePadding="6dp"
                    android:drawableTint="@color/color_acc1"
                    android:fontFamily="@font/vazir_bold"
                    android:gravity="center"
                    android:text="00:00"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small1"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/btn_phone"
                    app:layout_constraintStart_toStartOf="@+id/btn_phone"
                    app:layout_constraintTop_toBottomOf="@+id/btn_phone"
                    app:layout_constraintVertical_bias="0.25" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/bg_resend"
                android:gravity="center"
                android:paddingStart="32dp"
                android:paddingTop="10dp"
                android:paddingEnd="32dp"
                android:paddingBottom="10dp"
                android:text="دریافت مجدد کد"
                android:textColor="@color/color_acc2"
                android:textSize="@dimen/small1"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_note"
                app:layout_constraintStart_toStartOf="@+id/tv_note"
                app:layout_constraintTop_toBottomOf="@+id/tv_note" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>